Type fixes and mobile better readability

--- a/app/components/Card.module.css
+++ b/app/components/Card.module.css
@@ -1,6 +1,6 @@
 .Card {
     height: 100%;
-    width: 100%;
+    /* width: 100%; */
     margin: 25px;
     background-color: #500000;
     border-radius: 15px;
